k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: otus-homework-5
  name: otus-homework-5
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: otus-homework-5
