k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-homework-5
  labels:
    name: otus-homework-5
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - pathType: Prefix
        path: "/health/?(.*)"
        backend:
          service:
            name: otus-homework-5
            port: 
              number: 80
      - pathType: Prefix
        path: "/otusapp/artemiy/(.*)"
        backend:
          service:
            name: otus-homework-5
            port: 
              number: 80
